feat(tests): implemented remaining ReservationDao tests